--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
 
 
 android {
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:8.3.0'
-    //compile 'com.google.android.gms:play-services-auth:8.3.0'
-}
 
+    //compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.google.android.gms:play-services-fitness:8.3.0'
+
+}
+apply plugin: 'com.google.gms.google-services'
