--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ android {
         }
     }
 }
-
+repositories {
+    maven {url "https://jitpack.io"}
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -34,11 +36,12 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:11.8.0'
-
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     //compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.google.android.gms:play-services-fitness:11.8.0'
     compile 'com.google.android.gms:play-services-awareness:11.8.0'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
