--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,10 @@ android {
 repositories {
     maven {url "https://jitpack.io"}
 }
+
 dependencies {
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.google.firebase:firebase-core:11.8.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
