--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,11 @@ android {
     }
 }
 repositories {
-    maven {url "https://jitpack.io"}
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
