--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,6 @@
 
     <uses-feature android:name="android.hardware.location.gps" />
 
-    <uses-library android:name="com.google.android.maps" />
-
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -31,12 +29,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:parentActivityName=".FirebaseLogin">
+            android:parentActivityName=".ConfigureProfile">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <!-- The meta-data tag is required if you support API level 15 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".FirebaseLogin" />
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value=".ConfigureProfile" />-->
         </activity>
         <activity
             android:name=".FirebaseLogin"
@@ -56,6 +58,16 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".ConfigureProfile"
+            android:parentActivityName=".FirebaseLogin"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".FirebaseLogin" />
         </activity>
 
         <service android:name=".ActivityRecognizedService" />
@@ -92,16 +104,16 @@
             android:name=".Login"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ConfigureProfile"
-            android:label="@string/title_activity_configure_profile"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <!--<activity-->
+            <!--android:name=".ConfigureProfile"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:theme="@style/AppTheme.NoActionBar">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
 
         <activity
             android:name=".CalendarActivity"
@@ -112,6 +124,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+
+        <uses-library android:name="com.google.android.maps" />
     </application>
 
 
