--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <permission
         android:name="com.maret.maps.permission.MAPS_RECEIVE"
@@ -20,6 +19,7 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +28,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".HealthyLifeApp">
+
+        <receiver android:name=".MainActivity$FenceReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.FENCE_RECEIVER_ACTION" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:parentActivityName=".ConfigureProfile">
@@ -72,6 +79,7 @@
         </activity>
 
         <service android:name=".ActivityRecognizedService" />
+        <service android:name=".BackgroundService" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
