--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,11 +28,33 @@
         android:theme="@style/AppTheme"
         android:name=".HealthyLifeApp">
 
-        <receiver android:name=".MainActivity$FenceReceiver" >
-            <intent-filter>
-                <action android:name="android.intent.action.FENCE_RECEIVER_ACTION" />
-            </intent-filter>
-        </receiver>
+        <uses-library android:name="com.google.android.maps" />
+
+        <meta-data
+            android:name="com.google.android.awareness.API_KEY"
+            android:value="@string/google_play_services_key" />
+
+        <!-- places/location declaration -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_play_services_key" />
+
+        <!-- Beacon snapshots/fences declaration -->
+        <meta-data
+            android:name="com.google.android.nearby.messages.API_KEY"
+            android:value="@string/google_play_services_key" />
+
+        <service android:name=".SensorService" android:process=":my_service" />
+
+        <!--<receiver-->
+            <!--android:name=".SensorRestarterBroadcastReceiver"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true"-->
+            <!--android:label="RestartServiceWhenStopped">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="uk.ac.shef.oak.ActivityRecognition.RestartSensor"/>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
 
         <activity
             android:name=".MainActivity"
@@ -44,6 +65,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value=".FirebaseLogin" />-->
+
             <!--<meta-data-->
                 <!--android:name="android.support.PARENT_ACTIVITY"-->
                 <!--android:value=".ConfigureProfile" />-->
@@ -134,7 +159,6 @@
                 android:value=".MainActivity" />
         </activity>
 
-        <uses-library android:name="com.google.android.maps" />
     </application>
 
 
