--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,13 @@
 
         </activity>
 
+        <activity
+            android:name=".Maps"
+            android:label="@string/title_show_maps"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
         <service android:name=".ActivityRecognizedService" />
 
         <activity
