--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 repositories {
     maven { url "https://jitpack.io" }
+    jcenter()
 }
 
 dependencies {
@@ -47,6 +48,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-awareness:11.8.0'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'org.tensorflow:tensorflow-android:+'
 
 }
 apply plugin: 'com.google.gms.google-services'
