-added some methods to FirebaseUtility (calculate age, calculate part of the day, saveproperty to firebase)                                                                              -added "sleep" attribute to firebase database                                                                                   -think I managed to calculate time of sleep and save it to firebase, but we will see that tonight  -saving age and totalStillTime in global propertyes of SensorService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <service
             android:name=".SensorService"
-            android:enabled="true" >
+            android:enabled="true">
         </service>
 
         <!--<receiver-->
@@ -43,6 +43,13 @@
                 <!--<action android:name="uk.ac.shef.oak.ActivityRecognition.RestartSensor"/>-->
             <!--</intent-filter>-->
         <!--</receiver>-->
+
+        <receiver android:name=".SensorService$MyBroadCastReciever">
+            <intent-filter>
+                <action android:name="android.intent.action.SCREEN_ON"/>
+                <action android:name="android.intent.action.SCREEN_OFF"/>
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".MainActivity"
