--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,40 +19,39 @@
         android:required="true" />
 
     <application
+        android:name=".HealthyLifeApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".HealthyLifeApp">
+        android:theme="@style/AppTheme">
 
         <uses-library android:name="com.google.android.maps" />
 
         <service
             android:name=".SensorService"
-            android:enabled="true">
-        </service>
+            android:enabled="true"></service>
 
         <!--<receiver-->
-            <!--android:name=".SensorRestarterBroadcastReceiver"-->
-            <!--android:enabled="true"-->
-            <!--android:exported="true"-->
-            <!--android:label="RestartServiceWhenStopped">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="uk.ac.shef.oak.ActivityRecognition.RestartSensor"/>-->
-            <!--</intent-filter>-->
+        <!--android:name=".SensorRestarterBroadcastReceiver"-->
+        <!--android:enabled="true"-->
+        <!--android:exported="true"-->
+        <!--android:label="RestartServiceWhenStopped">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="uk.ac.shef.oak.ActivityRecognition.RestartSensor"/>-->
+        <!--</intent-filter>-->
         <!--</receiver>-->
 
         <receiver android:name=".SensorService$MyBroadCastReciever">
-        <intent-filter>
-            <action android:name="android.intent.action.SCREEN_ON"/>
-            <action android:name="android.intent.action.SCREEN_OFF"/>
-        </intent-filter>
-    </receiver>
-
-        <receiver android:name=".SensorService$NotificationReceiver">
+            <intent-filter>
+            <action android:name="android.intent.action.SCREEN_ON" />
+            <action android:name="android.intent.action.SCREEN_OFF" />
+            <!--<action android:name="android.intent.action.USER_PRESENT" />-->
+            </intent-filter>
         </receiver>
+
+        <receiver android:name=".SensorService$NotificationReceiver"></receiver>
 
         <activity
             android:name=".MainActivity"
@@ -64,12 +63,12 @@
             </intent-filter>
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <!--<meta-data-->
-                <!--android:name="android.support.PARENT_ACTIVITY"-->
-                <!--android:value=".FirebaseLogin" />-->
+            <!--android:name="android.support.PARENT_ACTIVITY"-->
+            <!--android:value=".FirebaseLogin" />-->
 
             <!--<meta-data-->
-                <!--android:name="android.support.PARENT_ACTIVITY"-->
-                <!--android:value=".ConfigureProfile" />-->
+            <!--android:name="android.support.PARENT_ACTIVITY"-->
+            <!--android:value=".ConfigureProfile" />-->
         </activity>
         <activity
             android:name=".FirebaseLogin"
@@ -77,6 +76,7 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -147,14 +147,14 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <!--<activity-->
-            <!--android:name=".ConfigureProfile"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:theme="@style/AppTheme.NoActionBar">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+        <!--android:name=".ConfigureProfile"-->
+        <!--android:label="@string/app_name"-->
+        <!--android:theme="@style/AppTheme.NoActionBar">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
         <!--</activity>-->
 
         <activity
